Updates for java 8